--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
         <div class="features-grid">
             <div class="feature-card animate-fade-in">
                 <div class="feature-icon">
-                    <img src="Advance charting.png" alt="Advanced Charting">
+                    <img src="advance charting.png" alt="Advanced Charting">
                 </div>
                 <h3>Advanced Charting</h3>
                 <p>Professional-grade charts with 100+ indicators, drawing tools, and multiple timeframes to analyze market movements.</p>
